--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,15 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.1
   isar: ^3.0.5
+  isar_flutter_libs: ^3.0.5
+  path_provider: ^2.0.12
+  isar_generator: ^3.0.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner: ^2.3.2
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
