--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   isar_flutter_libs: ^3.0.5
   path_provider: ^2.0.12
   isar_generator: ^3.0.5
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
